fixed bugs and upgrading to java 9